# genesis-pi-plus

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
assets/pi_plus/meshes/: ankle_roll_link_simplify.STL  base_link.STL  head_pitch_link.STL  head_yaw_link.STL  l_ankle_pitch_link.STL  l_ankle_roll_link.STL  l_calf_link.STL  l_calf_link_1.STL  l_calf_link_2.STL  l_calf_link_3.STL  l_calf_link_4.STL  l_calf_link_5.STL  l_calf_link_6.STL  l_calf_link_7.STL  l_elbow_link.STL  l_hip_pitch_link.STL  l_hip_roll_link.STL  l_shoulder_pitch_link.STL  l_shoulder_roll_link.STL  l_thigh_link.STL  l_upper_arm_link.STL  l_wrist_link.STL  r_ankle_pitch_link.STL  r_ankle_roll_link.STL  r_calf_link.STL  r_calf_link_1.STL  r_calf_link_2.STL  r_calf_link_3.STL  r_calf_link_4.STL  r_calf_link_5.STL  (+10 more)
configs/: pi_plus_domain_randomization.yaml  pi_plus_genesis.yaml  pi_plus_kick_rewards.yaml  pi_plus_kick_train.yaml
genesis_pi_plus/: __init__.py  assets.py  config.py  contacts.py  genesis_adapter.py  kick_env.py  kick_rewards.py  locomotion_policy.py  math_utils.py  observations.py  pd_controller.py  pi_plus_model.py  policy_io.py  safety.py
policies/: model_40000.pt
reports/: pi_plus_asset_report.md
scripts/: check_kick_reset_contact.py  eval_pi_plus_kick.py  export_pi_plus_kick_policy.py  inspect_amp_tk.py  play_pi_plus_kick.py  test_genesis_load_pi_plus.py  test_pi_plus_ball_contact.py  test_pi_plus_kick_components.py  test_pi_plus_pd_stand.py  test_pi_plus_policy_walk.py  train_pi_plus_kick.py  train_pi_plus_kick_guarded.py  view_pi_plus_initial_scene.py
